# rules_twirl

./: WORKSPACE  dependencies.yml  index.md  setup-tools.sh  workspace.bzl
scala/: BUILD.bazel
twirl/: twirl.bzl
twirl-compiler/: BUILD.bazel
twirl-compiler/src/main/scala/: CommandLineTwirlTemplateCompiler.scala
